HBox Beispiel mit Launch Parameter